--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vacationAroma</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/indexAll.css?b=17050301">
+    <link rel="stylesheet" href="./css/indexAll.css?b=17050403">
 
 </head>
 
@@ -79,10 +79,10 @@
     </div>
 
     <!-- 商品區 -->
-    <div class="commodityTitle setInFrame">
+    <div class="commodityTitle">
         <h3><img src="./img/products.png" alt=""></h3>
 
-        <ul class="commodity" id="commodityTitleId">
+        <ul class="commodity setInFrame" id="commodityTitleId">
             <!-- 商品要渲染在這 -->
         </ul>
     </div>
@@ -103,19 +103,24 @@
             <li>門市地址 高雄市鹽埕區假期一路3F</li>
 
         </ul>
-        
-        <div class="mapKit">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw" width="512" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+        <div class="mapKit setInFrame">
+            
+            <!-- 地圖最後載入 -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw"
+                width="512" height="200" style="border:0;" allowfullscreen="" >  
+            </iframe>  
         </div>
 
     </div>
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?b=17050301"></script>
-    <script src="./js/index.js?b=17050301"></script>
+    <script src="./js/API.js?b=17050403"></script>
+    <script src="./js/index.js?b=17050403"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/loginMember.js?b=17050403"></script>
 </body>
 
 </html>
