--- a/memberPage.html
+++ b/memberPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>memberPage</title>
-    <link rel="stylesheet" href="./css/all.css?b=17050301">
+    <link rel="stylesheet" href="./css/all.css?b=17050403">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.js'
         integrity='sha512-Kg0CewqPNO/ziOJuCq5eyl3P/V6OLz/Lb1I2m+yKS3lHZcGVFN/KOew18rWP+kTsL7haYdaqGjwHQCZrN0heLQ=='
         crossorigin='anonymous'></script>
@@ -16,8 +16,6 @@
 <body>
 
     <!-- 上方選單起始 要固定 -->
-
-
     <div class="navbar">
 
         <div class="setInFrame dpSpaceBetween">
@@ -66,13 +64,8 @@
 
 
             <tbody class="cartContentList" id="userCartList">
-                <!-- <th>訂單編號</th>
-                <th>訂購日期</th>
-                <th>金額</th>
-                <th>店取或宅配</th>
-                <th>收件人</th>
-                <th>訂單內容</th>
-            </tbody> -->
+                <!-- 渲染訂單 -->
+            </tbody>
 
                 <footer>
                     <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">
@@ -84,8 +77,6 @@
 
 
         </table>
-
-        <!-- </div> -->
 
     </div>
 
@@ -108,17 +99,22 @@
             <li>門市地址 高雄市鹽埕區假期一路3F</li>
 
         </ul>
-        <div class="mapkit">
+        <div class="mapKit setInFrame">
+            <!-- 地圖最後載入 -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw"
+                width="512" height="200" style="border:0;" allowfullscreen="" >  
+            </iframe>  
         </div>
 
     </div>
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?b=17050301"></script>
+    <script src="./js/API.js?b=17050403"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?b=17050301"></script>
-    <script src="./js/memberPage.js?b=17050302"></script>
+    <script src="./js/loginMember.js?b=17050403"></script>
+    <script src="./js/memberPage.js?b=17050403"></script>
 
 </body>
 
