--- a/searchAF.html
+++ b/searchAF.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>searchPage</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/all.css?b=17050301">
+    <link rel="stylesheet" href="./css/all.css?b=17050403">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
@@ -102,7 +102,7 @@
         <!-- 商品介紹 開始 -->
         <div class="searchContent">
             <div class="commodityBanner">
-                <img src="./img/pexels-photo-374757.jpeg" alt=>
+                <img src="./img/pexels-photo-374757.jpeg" alt="">
             </div>
             <ul class="searchSort">
                 <li class="sortBtn">
@@ -120,22 +120,13 @@
             </ul>
             <div class="commodityTitle">
                 <ul class="commodity commodityFlex" id="commodityArea">
-                    <!-- 試寫innerHtml -->
-                    <!-- <li class="commodityPack">
-                        <img src="/img/素材/coffee-1576256_1280.jpg" class="commodityImg" alt="#">
-                        <span class="commodityName">台灣 阿里山 日曬 賽利納</span>
-                        <span class="commodityPrice">NT.1490</span>
-                    </li> -->
-                    <!-- 試寫innerHtml -->
-
+                    <!-- 產品渲染 -->
                 </ul>
             </div>
         </div>
-
-
-
     </div>
     <!-- 商品介紹 結束 -->
+    
 
     <!-- 尾 店家資訊 -->
     <div class="footer">
@@ -150,7 +141,13 @@
             <li>門市地址 高雄市鹽埕區假期一路3F</li>
 
         </ul>
-        <div class="mapkit">
+        <div class="mapKit setInFrame">
+            
+            <!-- 地圖最後載入 -->
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw"
+                width="512" height="200" style="border:0;" allowfullscreen="" >  
+            </iframe>  
         </div>
 
     </div>
@@ -159,14 +156,19 @@
 
 
     <!-- 載入ＪＳ& API -->
-
-    <script src="./js/API.js?b=17050301"></script>
+    <script src="./js/API.js?b=17050403"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?b=17050301"></script>
+    <script src="./js/loginMember.js?b=17050403"></script>
     <!-- 產品選單 -->
-    <!-- <script src="/js/searchContent.js"></script> -->
-    <script src="./js/searchAF.js?b=17050301"></script>
+    <script src="./js/searchAF.js?b=17050403"></script>
 
+    <!-- AF協力 -->
+    <script>
+        window.onbeforeunload = function () {
+            localStorage.removeItem("backSearch");
+            localStorage.removeItem("backSearch2");
+        }
+    </script>
 
 
 </body>
