--- a/sp3StoreDelivery.html
+++ b/sp3StoreDelivery.html
@@ -65,11 +65,16 @@
                         <input type="text" name=""  value="" id="recipientAddress" class="" placeholder="收件地址">
                         <hr class="solid">
                     </li> -->
+                    
+                <div class="between">
+                    <div></div>
+                    <div class="nextBtn" id="nextBtnSDsp3Id">
+                        <span>下一步</span>
+                    </div>
+                </div>
 
             </ul>
-            <div class="nextBtn" id="nextBtnSDsp3Id">
-                <span>下一步</span>
-            </div>
+
         </div>
 
     </div>
