--- a/sp4LineDeliveryCheck.html
+++ b/sp4LineDeliveryCheck.html
@@ -57,7 +57,12 @@
 
             </ul>
 
-            <div class="nextBtn previousBtn" id="stepBtnLineId">前往LINE付款</div>
+            <div class="between">
+                <div></div>
+                <div class="nextBtn previousBtn" id="stepBtnLineId">前往LINE付款</div>
+                </div>
+            </div>
+
 
         </div>
 
