--- a/sp4StoreDeliveryCheck.html
+++ b/sp4StoreDeliveryCheck.html
@@ -59,7 +59,9 @@
                 <!-- 渲染訂購人資訊 -->
             </ul>
 
-            <div class="stepBtn" id="stepBtnSDId">
+
+            <div class="between stepBtn" id="stepBtnSDId">
+                <div></div>
                 <div class="nextBtn previousBtn">下一步</div>
             </div>
 
