--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vacationAroma</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="./css/indexAll.css?b=17050403">
+    <link rel="stylesheet" href="./css/indexAll.css?b=17050425">
 
 </head>
 
@@ -20,7 +20,7 @@
                 <a href="./index.html"><img src="./img/logoB.png" alt=""></a>
             </h1>
 
-            <ul class="loginMember">    
+            <ul class="loginMember">
                 <li><a href="./login.html">會員登入</a></li>
                 <li><a href="./sp1Cart.html">購物車</a></li>
 
@@ -60,8 +60,8 @@
 
         <div class="brandContent">
             <span>假期氣味</span>
-            <p>是由兩位喜歡喝咖啡與登山的高雄女孩所創立的品牌。
-                在一次到阿里山出遊時，發現豆子風味的世界不僅僅出現在地球的另一端，剩下的還沒打完但預計需要這些字數。
+            <p>是由兩位喜歡喝咖啡與旅行女孩所創立的品牌。喜歡在假日來場味蕾的旅行。
+                在一次到阿里山出遊時，發現豆子風味的世界不僅僅出現在地球的另一端，在我們的土地上也能有味蕾的驚奇之旅。
             </p>
 
             <p>也許我們不能每天幫你泡一壺美好的心情，但我們可以將你想要的假期帶領給你。</p>
@@ -105,22 +105,22 @@
         </ul>
 
         <div class="mapKit setInFrame">
-            
+
             <!-- 地圖最後載入 -->
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw"
-                width="512" height="200" style="border:0;" allowfullscreen="" >  
-            </iframe>  
+                width="512" height="200" style="border:0;" allowfullscreen="">
+            </iframe>
         </div>
 
     </div>
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?b=17050403"></script>
-    <script src="./js/index.js?b=17050403"></script>
+    <script src="./js/API.js?b=17050425"></script>
+    <script src="./js/index.js?b=17050425"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?b=17050403"></script>
+    <script src="./js/loginMember.js?b=17050425"></script>
 </body>
 
 </html>
