--- a/memberPage.html
+++ b/memberPage.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>memberPage</title>
-    <link rel="stylesheet" href="./css/all.css?b=17050403">
+    <link rel="stylesheet" href="./css/all.css?b=17050425">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.js'
         integrity='sha512-Kg0CewqPNO/ziOJuCq5eyl3P/V6OLz/Lb1I2m+yKS3lHZcGVFN/KOew18rWP+kTsL7haYdaqGjwHQCZrN0heLQ=='
         crossorigin='anonymous'></script>
@@ -26,7 +26,6 @@
             <ul class="loginMember">
                 <li><a href="./login.html">會員登入</a></li>
                 <li><a href="./sp1Cart.html">購物車</a></li>
-                <li><a href="">風味搜尋</a></li>
             </ul>
 
         </div>
@@ -67,13 +66,13 @@
                 <!-- 渲染訂單 -->
             </tbody>
 
-                <footer>
-                    <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">
-                        <div class="nextBtn">
-                            <span>回首頁</span>
-                        </div>
-                    </td>
-                </footer>
+            <footer>
+                <td colspan="15" align="right" id="nextIndexBtnId" class="tdNotSolid">
+                    <div class="nextBtn">
+                        <span>回首頁</span>
+                    </div>
+                </td>
+            </footer>
 
 
         </table>
@@ -86,13 +85,10 @@
     <!-- 尾 店家資訊 -->
     <div class="footer">
         <ul class="brandVA setInFrame">
-            <li>
-                <span class="vaIGBtn"></span>
-                <span class="vaFBBtn"></span>
-                <span class="vaLineBtn"></span>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+            <li class="footerIconBtn">
+                <a href="#" class="social IGBtn"></a>
+                <a href="#" class="social FBBtn"></a>
+                <a href="#" class="social LineBtn"></a>
             </li>
             <li>假期風味</li>
             <li>聯絡電話 07-5169-123</li>
@@ -100,21 +96,22 @@
 
         </ul>
         <div class="mapKit setInFrame">
+
             <!-- 地圖最後載入 -->
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14733.294170546787!2d120.300311!3d22.6043902!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9f297a86cf40dfb!2z6auY6ZuE6Luf6auU56eR5oqA5ZyS5Y2A!5e0!3m2!1szh-TW!2stw!4v1620052976128!5m2!1szh-TW!2stw"
-                width="512" height="200" style="border:0;" allowfullscreen="" >  
-            </iframe>  
+                width="512" height="200" style="border:0;" allowfullscreen="">
+            </iframe>
         </div>
 
     </div>
     <!-- 尾 店家資訊 結束 -->
 
     <!-- 載入ＪＳ -->
-    <script src="./js/API.js?b=17050403"></script>
+    <script src="./js/API.js?b=17050425"></script>
     <!-- 判斷登入 -->
-    <script src="./js/loginMember.js?b=17050403"></script>
-    <script src="./js/memberPage.js?b=17050403"></script>
+    <script src="./js/loginMember.js?b=17050425"></script>
+    <script src="./js/memberPage.js?b=17050425"></script>
 
 </body>
 
